// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Skeleton > renders circle variant 1`] = `
<div>
  <div
    class="ui:relative ui:overflow-hidden ui:bg-muted ui-skeleton-shimmer ui:rounded-full"
  />
</div>
`;

exports[`Skeleton > renders default (rectangle variant) 1`] = `
<div>
  <div
    class="ui:relative ui:overflow-hidden ui:bg-muted ui-skeleton-shimmer ui:rounded-lg"
  />
</div>
`;

exports[`Skeleton > renders line variant 1`] = `
<div>
  <div
    class="ui:relative ui:overflow-hidden ui:bg-muted ui-skeleton-shimmer ui:rounded"
  />
</div>
`;

exports[`Skeleton > renders line with rounded=false 1`] = `
<div>
  <div
    class="ui:relative ui:overflow-hidden ui:bg-muted ui-skeleton-shimmer"
  />
</div>
`;

exports[`Skeleton > renders rectangle with rounded=false 1`] = `
<div>
  <div
    class="ui:relative ui:overflow-hidden ui:bg-muted ui-skeleton-shimmer"
  />
</div>
`;

exports[`Skeleton > renders with aspectRatio 1`] = `
<div>
  <div
    class="ui:relative ui:overflow-hidden ui:bg-muted ui-skeleton-shimmer ui:rounded-lg"
    style="aspect-ratio: 16 / 9;"
  />
</div>
`;

exports[`Skeleton > renders with custom className 1`] = `
<div>
  <div
    class="ui:relative ui:overflow-hidden ui:bg-muted ui-skeleton-shimmer ui:rounded-lg ui:custom"
  />
</div>
`;

exports[`Skeleton > renders with width and height 1`] = `
<div>
  <div
    class="ui:relative ui:overflow-hidden ui:bg-muted ui-skeleton-shimmer ui:rounded-lg 200px 100px"
  />
</div>
`;
